handover/evidence/dev_self_hosting/dev_1778836686627_1669621/artifacts/command_0007_stderr.txt
WARNING: working tree has non-evidence changes; /runner-preflight Stage 1 normally rejects this.
WARNING: only 19G free on /; architect minimum is 20G.
 --> src/sdk/tools/search.rs:6:5
  |
6 | use std::path::Path;
  |     ^^^^^^^^^^^^^^^

warning: unused import: `TxId`
  --> src/state/sequencer.rs:41:82
   |
41 | use crate::state::q_state::{AgentId, EscrowEntry, Hash, QState, TaskMarketEntry, TxId};
   |                                                                                  ^^^^

warning: unused imports: `AgentId` and `ShareSidePair`
  --> src/state/price_index.rs:23:29
   |
23 | use crate::state::q_state::{AgentId, ChallengeStatus, EconomicState, ShareSidePair};
   |                             ^^^^^^^                                  ^^^^^^^^^^^^^

warning: unused import: `NodePosition`
  --> src/state/price_index.rs:24:39
   |
24 | use crate::state::typed_tx::{EventId, NodePosition, PositionSide, ShareAmount};
   |                                       ^^^^^^^^^^^^

warning: unused import: `Digest`
  --> src/runtime/agent_keypairs.rs:31:12
   |
31 | use sha2::{Digest, Sha256};
   |            ^^^^^^

warning: function `sign_rejected_attempt_summary` is never used
   --> src/bottom_white/ledger/system_keypair.rs:583:19
    |
583 |     pub(crate) fn sign_rejected_attempt_summary(
    |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
    = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: function `sign_system_message` is never used
   --> src/bottom_white/ledger/system_keypair.rs:594:19
    |
594 |     pub(crate) fn sign_system_message(
    |                   ^^^^^^^^^^^^^^^^^^^

warning: function `sign_epoch_rotation_proof` is never used
   --> src/bottom_white/ledger/system_keypair.rs:694:19
    |
694 |     pub(crate) fn sign_epoch_rotation_proof(
    |                   ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: function `sign_system_message` is never used
   --> src/bottom_white/ledger/system_keypair.rs:705:19
    |
705 |     pub(crate) fn sign_system_message(
    |                   ^^^^^^^^^^^^^^^^^^^

warning: field `tx_id` is never read
   --> src/runtime/chain_derived_run_facts.rs:242:5
    |
241 | struct WorkTxAttempt {
    |        ------------- field in this struct
242 |     tx_id: TxId,
    |     ^^^^^
    |
    = note: `WorkTxAttempt` has derived impls for the traits `Clone` and `Debug`, but these are intentionally ignored during dead code analysis

   Compiling minif2f_v4 v0.1.0 (/home/zephryj/projects/turingosv4/experiments/minif2f_v4)
warning: `turingosv4` (lib) generated 25 warnings (run `cargo fix --lib -p turingosv4` to apply 19 suggestions)
error[E0277]: `InvestRouteError` doesn't implement `std::fmt::Display`
    --> experiments/minif2f_v4/src/bin/evaluator.rs:1993:81
     |
1993 | ...                   FAIL-CLOSED: route failed: {e}"
     |                                                  ^^^ `InvestRouteError` cannot be formatted with the default formatter
     |
     = help: the trait `std::fmt::Display` is not implemented for `InvestRouteError`
     = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
     = note: this error originates in the macro `$crate::__private_api::format_args` which comes from the expansion of the macro `error` (in Nightly builds, run with -Z macro-backtrace for more info)

For more information about this error, try `rustc --explain E0277`.
error: could not compile `minif2f_v4` (bin "evaluator") due to 1 previous error
warning: build failed, waiting for other jobs to finish...
ERROR: release binary build failed; refusing to continue with stale release binaries
